force-app/main/default/objects/Appointment__c/fields/P_Address__c.field-meta.xml
<CustomField>
    <fullName>P_Address__c</fullName>
    <label>P_Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>