force-app/main/default/objects/Appointment__c/fields/P_Name__c.field-meta.xml
<CustomField>
    <fullName>P_Name__c</fullName>
    <label>P_Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>