force-app/main/default/objects/Appointment__c/fields/P_Phone__c.field-meta.xml
<CustomField>
    <fullName>P_Phone__c</fullName>
    <label>P_Phone</label>
    <type>Phone</type>
</CustomField>