force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>P_Name__c</columns>
    <columns>P_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>